Move weather toggle down to avoid overlap when weather panel is closed.

--- a/Flask/static/Style.css
+++ b/Flask/static/Style.css
@@ -191,7 +191,7 @@ body
 {
     z-index: 5;
     position: absolute;
-    top: 10px;
+    bottom: 10px;
     left: 100%;
     height: 150px;
     width: 75px;
